--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -18,26 +18,21 @@ nav {
     font-size: 14px;
     line-height: 19px;
     letter-spacing: 0.02em;
-
 }
+
 ul{
     display: flex;
     width: 40%;
     justify-content: space-between;
     list-style-type: none;
+    margin-left: 440px;
+    margin-right: 110px;
 }
-.navLogo{
-    margin-left: -165px;
-}
+
 a {
     color: black;
     text-decoration: none;
-}
-.blue:hover {
-    color: #2B3B92;
-}
-.red:hover {
-    color: #EB413A;
+    padding: 10px;
 }
 #check{
     display: none;
@@ -48,7 +43,7 @@ a {
     padding-left: 10px;
 }
 .burger{
-    display: inline-block;
+    display: none;
     cursor: pointer;
     position: absolute;
     top: 37px;
@@ -66,7 +61,7 @@ a {
 
 @media screen and (max-width: 600px) {
     .burger {
-        visibility: visible;
+        display: block;
     }
     .X{
         display: flex;
@@ -92,7 +87,111 @@ a {
     #check:checked ~ ul{
         left: 0;
     }
-  }
+}
+/*************************************************************************************************************/
+.about:hover {
+    color: #2B3B92;
+}
+.aboutdrop{
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-self: center;
+    text-align: center;
+    
+    position: absolute;
+    background-color: white;
+    width: 220px;
+    min-height: 160px;
+    padding: 0;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.aboutdrop a{
+    display: block;
+    padding: 14px 32px;
+}
+.about:hover + .aboutdrop{display: flex;}
+.aboutdrop:hover {display: flex;}
+.aboutdrop a:hover {background-color: #ddd;}
+/*************************************************************************************************************/
+.forms:hover {
+    color: #EB413A;
+}
+.formsdrop{
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-self: center;
+    text-align: center;
+    
+    position: absolute;
+    background-color: white;
+    width: 220px;
+    min-height: 130px;
+    padding: 0;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.formsdrop a{
+    display: block;
+    padding: 14px 32px;
+}
+.forms:hover + .formsdrop{display: flex;}
+.formsdrop:hover {display: flex;}
+.formsdrop a:hover {background-color: #ddd;}
+/*************************************************************************************************************/
+.faqs:hover {
+    color: #2B3B92;
+}
+.faqsdrop{
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-self: center;
+    text-align: center;
+    
+    position: absolute;
+    background-color: white;
+    width: 180px;
+    height: 93px;
+    padding: 0;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.faqsdrop a{
+    display: block;
+    padding: 14px 32px;
+}
+.faqs:hover + .faqsdrop{display: flex;}
+.faqsdrop:hover {display: flex;}
+.faqsdrop a:hover {background-color: #ddd;}
+/*************************************************************************************************************/
+.contact:hover {
+    color: #EB413A;
+}
+.contactdrop{
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-self: center;
+    text-align: center;
+    
+    position: absolute;
+    background-color: white;
+    width: 180px;
+    height: 93px;
+    padding: 0;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.contactdrop a{
+    display: block;
+    padding: 14px 32px;
+}
+.contact:hover + .contactdrop{display: flex;}
+.contactdrop:hover {display: flex;}
+.contactdrop a:hover {background-color: #ddd;}
 /*************************************************************************************************************/
 footer {
     display: flex;
@@ -104,7 +203,7 @@ footer {
     width: 100%;
     height: 235px;
     margin: 0;
-    border-top: 2px solid #FFEB34;
+    border-top: 5px solid #FFEB34;
 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
@@ -134,7 +233,7 @@ footer {
     margin: 0px;
     padding: 0px;
     width: 100%;
-    height: 1670px;
+    height: 2030px;
     padding-top: 100px;
 }
 /*************************************************************************************************************/
@@ -145,17 +244,120 @@ footer {
     background: rgba(0, 0, 0, 0.3);
 }
 /*************************************************************************************************************/
-.volunteer{
+.helpdesk{
     height: 480px;
     left: 0px;
     top: 812px;
     background: #EC625D;
+
+}
+.helpdesk_content{
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+
+    width: 420px;
+    height: 254px;
+    margin-left: 120px;
+    padding-top: 80px;
+
+    background: #EC625D;
+}
+.helpdesk_content h1, p{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+} 
+.helpdesk_content button{
+    text-decoration: none;
+}
+.helpdesk_content a{
+    width: 150px;
+    border: 5px solid white;
+    border-radius: 8px;
+    background-color: #EC625D;
+    color: white;
+    font-size: 14px;
+    padding: 16px 32px;
 }
 /*************************************************************************************************************/
-.partner{
+.survey{
     height: 480px;
     left: 0px;
     top: 1292px;
     background: #3C4B9D;
 }
+.survey_content{
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+
+    width: 420px;
+    height: 254px;
+    margin-left: 810px;
+    padding-top: 80px;
+
+    background: #3C4B9D;
+}
+.survey_content h1, p{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+} 
+.survey_content button{
+    text-decoration: none;
+}
+.survey_content a{
+    width: 160px;
+    border: 5px solid white;
+    border-radius: 8px;
+    background-color: #3C4B9D;
+    color: white;
+    font-size: 14px;
+    padding: 16px 32px;
+}
 /*************************************************************************************************************/
+.volunteer{
+    height: 360px;
+    left: 0px;
+    top: 1751px;
+    background: #4F4F4F;
+}
+.volunteer_content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+
+    width: 482px;
+    height: 132px;
+    margin-left: 450px;
+    padding-top: 80px;
+
+    background-color: #4F4F4F ;
+    
+}
+.volunteer_content h1{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.volunteer_content a{
+    width: 208px;
+    height: 54px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    color: #4F4F4F;
+    background-color: #FFEB34;
+    border: 1px solid #FFEB34;
+    padding: 16px 32px;
+    margin-top: 30px;
+}
+.minimen{
+    position: relative;
+    display: flex;
+    width: inherit;
+    overflow: hidden;
+    margin-top: 110px;
+}
+.minimen img{
+    margin-left: -5px;
+    margin-right: -4px;
+}
