with more comments

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -4,6 +4,7 @@ a{
     font-family: 'Open Sans', sans-serif;
 }
 /*************************************************************************************************************/
+/*Navigation Bar*/
 nav{
     display: flex;
     justify-content: center;
@@ -90,6 +91,7 @@ nav{
     color: #2B3B92;
 }
 /*************************************************************************************************************/
+/*Main Section*/
 .main{
     width: 100vw;
     height: 600px;
@@ -114,6 +116,7 @@ nav{
     margin-bottom: 10px;
 }
 /*************************************************************************************************************/
+/*Helpdesk Section*/
 .helpdesk{
     display: flex;
     flex-wrap: nowrap;
@@ -160,6 +163,7 @@ nav{
     max-width: 50%;
 }
 /*************************************************************************************************************/
+/*Survey Section*/
 .survey{
     display: flex;
     flex-wrap: nowrap;
@@ -202,6 +206,7 @@ nav{
     max-width: 50%;   
 }
 /*************************************************************************************************************/
+/*Volunteer Section*/
 .volunteer{
     width: 100vw;
     height: 360px;
@@ -249,6 +254,7 @@ nav{
     margin-right: -4px;
 }
 /*************************************************************************************************************/
+/*Footer*/
 footer {
     display: flex;
     flex-direction: column;
@@ -379,7 +385,7 @@ footer {
     }
 
 }
-
+/*************************************************************************************************************/
 @media screen and (max-width: 320px) {
     .navLogo{
         margin-right: 60vw;
@@ -397,6 +403,6 @@ footer {
 
     .footerContent img, .footerIcons{
         margin-top: 10px;
-    }
-      
+    }     
 }
+/*************************************************************************************************************/
