--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,6 +3,10 @@ a{
     text-decoration: none;
     font-family: 'Open Sans', sans-serif;
 }
+
+
+/*************************************************************************************************************/
+/*HOMEPAGE*/
 /*************************************************************************************************************/
 /*Navigation Bar*/
 nav{
@@ -405,4 +409,8 @@ footer {
         margin-top: 10px;
     }     
 }
+
+
+/*************************************************************************************************************/
+/*ABOUT*/
 /*************************************************************************************************************/
