--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,16 +1,18 @@
-a{
+a,
+.forms {
     color: black;
     text-decoration: none;
     font-family: 'Open Sans', sans-serif;
+    cursor: pointer;
 }
 
 
 /*Navigation Bar*/
-nav{
+nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed ;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100vw;
@@ -18,11 +20,12 @@ nav{
     background-color: white;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 }
-.checkbox{
+
+.checkbox {
     display: none;
 }
 
-.burger_icon{
+.burger_icon {
     display: none;
     position: absolute;
     top: 5vh;
@@ -30,19 +33,21 @@ nav{
     cursor: pointer;
 }
 
-.bar1, .bar2, .bar3 {
+.bar1,
+.bar2,
+.bar3 {
     width: 35px;
     height: 5px;
     margin: 5px 0;
     background-color: #333;
 }
 
-.navLogo{
+.navLogo {
     width: 170px;
     margin-left: 5vw;
 }
 
-.page_menu{
+.page_menu {
     display: flex;
     justify-content: space-between;
     width: 40vw;
@@ -58,33 +63,44 @@ nav{
 .forms:hover {
     color: #EB413A;
 }
-.formsdrop{
+
+.formsdrop {
     display: none;
     flex-direction: column;
     justify-content: space-around;
     align-self: center;
     text-align: center;
-    
+
     position: absolute;
     background-color: white;
     width: 220px;
     min-height: 130px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
-.formsdrop a{
+
+.formsdrop a {
     display: block;
     padding: 14px 32px;
 }
-.forms:hover + .formsdrop{display: flex;}
-.formsdrop:hover {display: flex;}
-.formsdrop a:hover {background-color: #ddd;}
+
+.forms:hover+.formsdrop {
+    display: flex;
+}
+
+.formsdrop:hover {
+    display: flex;
+}
+
+.formsdrop a:hover {
+    background-color: #ddd;
+}
 
 .faqs:hover {
     color: #2B3B92;
 }
 
-.team:hover{
+.team:hover {
     color: #EB413A;
 }
 
@@ -103,30 +119,41 @@ footer {
     color: #828282;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
-    line-height: 19px;   
+    line-height: 19px;
 }
 
-.footerContent{
+.footerContent {
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin-top: 50px;
 }
 
-.footerSubContent{
+.footerSubContent {
     display: flex;
     flex-direction: column;
 }
 
-.footerIcons{
+.footerIcons {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    margin-bottom: 8px;
 }
 
-.footerDSC{
+.footerIcons svg {
+    margin: 0 16px;
+}
+
+
+.footerDSC {
     text-align: center;
     margin-bottom: 10px;
 }
+
+.footerDSC a {
+    font-weight: bold;
+}
+
 /*************************************************************************************************************/
 
 
@@ -136,39 +163,42 @@ footer {
 
 
 /*Main Section*/
-.main{
+.main {
     width: 100vw;
     height: 600px;
     max-width: 100%;
     padding-top: 100px;
-    margin-top: 70px;;
+    margin-top: 70px;
+    ;
     background: url("../assets/images/bantay 1.png");
     background-size: cover;
 }
-.main_content{
+
+.main_content {
     width: 30%;
     height: 40%;
     margin-left: 10vw;
     margin-top: 20vh;
     font-size: 1.7em;
     font-family: 'Open Sans', sans-serif;
-    color: #3C4B9D;  
+    color: #3C4B9D;
 }
 
-.main_content img{
+.main_content img {
     width: 40vw;
     margin-bottom: 10px;
 }
+
 /*************************************************************************************************************/
 /*Helpdesk Section*/
-.helpdesk{
+.helpdesk {
     display: flex;
     flex-wrap: nowrap;
     width: 100vw;
     max-width: 100%;
 }
 
-.helpdesk_content{
+.helpdesk_content {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -179,19 +209,21 @@ footer {
     background: #EC625D;
 }
 
-.helpdesk_content h1, p{
+.helpdesk_content h1,
+p {
     font-family: 'Open Sans', sans-serif;
     color: white;
-} 
+}
 
-.helpdesk_content h1{
+.helpdesk_content h1 {
     margin-bottom: 0;
 }
 
-.helpdesk_content button{
+.helpdesk_content button {
     text-decoration: none;
 }
-.helpdesk_content a{
+
+.helpdesk_content a {
     width: 110px;
     padding: 16px 32px;
     border: 5px solid white;
@@ -199,22 +231,24 @@ footer {
     background-color: #EC625D;
     color: white;
     font-size: 14px;
-    text-decoration: none;  
+    text-decoration: none;
 }
 
-.helpdesk_pic{
+.helpdesk_pic {
     width: 50vw;
     max-width: 50%;
 }
+
 /*************************************************************************************************************/
 /*Survey Section*/
-.survey{
+.survey {
     display: flex;
     flex-wrap: nowrap;
     width: 100vw;
     max-width: 100%;
 }
-.survey_content{
+
+.survey_content {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -224,17 +258,22 @@ footer {
     padding: 0 5vw;
     background: #3C4B9D;
 }
-.survey_content h1, p{
+
+.survey_content h1,
+p {
     font-family: 'Open Sans', sans-serif;
     color: white;
-} 
-.survey_content h1{
+}
+
+.survey_content h1 {
     margin-bottom: 0;
 }
-.survey_content button{
+
+.survey_content button {
     text-decoration: none;
 }
-.survey_content a{
+
+.survey_content a {
     width: 170px;
     padding: 16px 32px;
     border: 5px solid white;
@@ -243,38 +282,40 @@ footer {
     color: white;
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
-    text-decoration: none;  
+    text-decoration: none;
 }
-.survey_pic{
+
+.survey_pic {
     width: 50vw;
-    max-width: 50%;   
+    max-width: 50%;
 }
+
 /*************************************************************************************************************/
 /*Volunteer Section*/
-.volunteer{
+.volunteer {
     width: 100vw;
     height: 360px;
     max-width: 100%;
     background: #4F4F4F;
 }
 
-.volunteer_content{
+.volunteer_content {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     height: inherit;
-    background-color: #4F4F4F ;  
+    background-color: #4F4F4F;
 }
 
-.volunteer_label{
+.volunteer_label {
     padding-top: 35px;
     color: white;
     font-family: 'Open Sans', sans-serif;
-    text-align: center; 
+    text-align: center;
 }
 
-.volunteer_content a{
+.volunteer_content a {
     width: 200px;
     height: 20px;
     font-family: 'Open Sans', sans-serif;
@@ -288,15 +329,17 @@ footer {
     padding: 16px 32px;
 }
 
-.minimen{
+.minimen {
     display: flex;
     max-width: 100%;
     overflow-x: hidden;
 }
-.minimen img{
+
+.minimen img {
     margin-left: -5px;
     margin-right: -4px;
 }
+
 /*************************************************************************************************************/
 
 
@@ -308,20 +351,23 @@ footer {
 
 /*************************************************************************************************************/
 @media screen and (max-width: 1000px) {
-    .navLogo{
+    .navLogo {
         width: 120px;
         margin-right: 70vw;
     }
 
-    .burger_icon{
+    .burger_icon {
         display: block;
-    } 
+    }
 
-    .about:hover + .aboutdrop, .forms:hover + .formsdrop, .faqs:hover + .faqsdrop, .contact:hover + .contactdrop{
+    .about:hover+.aboutdrop,
+    .forms:hover+.formsdrop,
+    .faqs:hover+.faqsdrop,
+    .contact:hover+.contactdrop {
         display: none;
     }
 
-    .page_menu{
+    .page_menu {
         flex-direction: column;
         justify-content: space-around;
         width: 100vw;
@@ -332,71 +378,77 @@ footer {
         position: fixed;
         top: 0;
         top: -100%;
-        background:white;
-        padding: 0 ;
+        background: white;
+        padding: 0;
         margin: 0;
         transition: all 0.5s;
         z-index: -1;
         opacity: 0;
     }
+
     .about:hover {
         color: #2B3B92;
     }
+
     .forms:hover {
         color: #EB413A;
     }
+
     .faqs:hover {
         color: #2B3B92;
     }
+
     .contact:hover {
         color: #EB413A;
     }
 
-    #check:checked ~ ul{
+    #check:checked~ul {
         top: 0;
         opacity: 1;
     }
 
-    .main{
+    .main {
         height: 100vh;
         background-size: 95%;
         background-repeat: no-repeat;
         background-position: right bottom;
     }
-    .main_content{
+
+    .main_content {
         width: 60%;
         margin-top: 10vh;
     }
-    .main_content img{
-        width: 55vw; 
+
+    .main_content img {
+        width: 55vw;
     }
 
-    .helpdesk{
+    .helpdesk {
         flex-direction: column-reverse;
         overflow: hidden;
     }
-    
-    .helpdesk_content{
+
+    .helpdesk_content {
         width: 90vw;
         max-width: 90%;
     }
 
-    .helpdesk_pic{
+    .helpdesk_pic {
         width: 100vw;
         max-width: 100%;
     }
 
-    .survey{
+    .survey {
         flex-direction: column;
         overflow: hidden;
     }
 
-    .survey_content{
+    .survey_content {
         width: 90vw;
         max-width: 90%;
     }
 
-    .survey_pic{
+    .survey_pic {
         width: 100vw;
         max-width: 100%;
     }
@@ -404,22 +456,25 @@ footer {
 }
 
 @media screen and (max-width: 320px) {
-    .navLogo{
+    .navLogo {
         margin-right: 60vw;
     }
-    .main{
+
+    .main {
         height: 470px;
         margin-top: 0;
     }
 
-    .footerContent{
+    .footerContent {
         margin-top: 0;
         justify-content: space-around;
         flex-direction: column;
     }
 
-    .footerContent img, .footerIcons{
+    .footerContent img,
+    .footerIcons {
         margin-top: 10px;
-    }     
+    }
 }
+
 /*************************************************************************************************************/
