--- a/public/src/stylesheets/styles.css
+++ b/public/src/stylesheets/styles.css
@@ -349,6 +349,11 @@ p {
 /*************************************************************************************************************/
 
 
+
+/*************************************************************************************************************/
+/*TEAM*/
+/*************************************************************************************************************/
+
 /*************************************************************************************************************/
 @media screen and (max-width: 1000px) {
     .navLogo {
